[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "1. Brain-Prime - Identify whether a given number is prime. 2. Brain-GCD - Calculate the greatest common divisor (GCD) of pairs of numbers. 3. Brain-Progression - Guess the missing number in an arithmetic sequence. 4. Brain-Even - Determine whether a series of numbers are even or odd. 5. Brain-Calc - Solve a variety of math problems requiring quick responses."

authors = ["Ivanov Egor <ghora0907@gmail.com>"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Gamers",
  "Topic :: Entertainment :: Games",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
repository =  "https://github.com/Autodidactus15/python-project-49"  
readme = "README.md"
packages = [
  { include = "brain_games" },
]
[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
